# cogent3

./: .coveragerc  .gitignore  .hgignore  .hgtags  .readthedocs.yml  .sourcery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  LICENSE  MANIFEST.in  NumpyPortingNotes.txt  README  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  c3dev-environment.yml  changelog.md  cogent-requirements.txt  identity.py  issue.py  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  run_tests  seq_maker.patch  seqdata_WIP.patch  setup.py  ssh-keygen -t rsa -b 4096 -C "u7230624@anu.edu.au"  ssh-keygen -t rsa -b 4096 -C "u7230624@anu.edu.au".pub  t  tmp.py  tox.ini  update_version
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  deprecation.md  discontinue.md  docs_fix.md  docs_new.md
.github/workflows/: build_docs.yml  codeql.yml  deploy_dev_docs.yml  linters.yml  release.yml  testing_develop.yml
changelog.d/: 20230303_121357_richard_issue1304.md  20230324_161155_Gavin.Huttley.md  20230324_162931_Gavin.Huttley.md  20230328_072019_richard_issue1194_rename_TreeAlign.md  20230329_162247_richard_Issue_1324_Deprecate_decorator.md  20230410_151103_Gavin.Huttley.md  20230501_073633_Gavin.Huttley.md  20230501_080044_Gavin.Huttley.md  20230501_083455_Gavin.Huttley.md  20230512_161917_Gavin.Huttley.md  20230512_162852_Gavin.Huttley.md  20230512_163618_Gavin.Huttley.md  20230512_165751_Gavin.Huttley.md  20230519_092234_Gavin.Huttley.md  20230519_171446_Gavin.Huttley.md  20230525_111647_Gavin.Huttley.md  20230531_155406_Gavin.Huttley.md  20230615_084650_Gavin.Huttley.md  20230712_102325_Gavin.Huttley.md  20230712_184410_Gavin.Huttley.md  20230717_121603_Gavin.Huttley.md  20230915_112525_Gavin.Huttley.md  20230920_184448_Gavin.Huttley.md  20230921_115611_Gavin.Huttley.md  20230921_151053_Gavin.Huttley.md  20230921_202221_Gavin.Huttley.md  20231004_123810_Gavin.Huttley.md  20231005_080610_Gavin.Huttley.md  20231005_170638_Gavin.Huttley.md  20231009_141753_Gavin.Huttley.md  20231009_145624_Gavin.Huttley.md  20231122_134508_Gavin.Huttley.md  20231201_134621_Gavin.Huttley.md  20231204_133511_Gavin.Huttley.md  20231207_104849_36436914+fredjaya_develop.md  20231212_084420_Gavin.Huttley.md  20231212_165048_u6096186_develop.md  20231215_104826_Gavin.Huttley.md  20240205_080441_Gavin.Huttley.md  20240205_080719_Gavin.Huttley.md  (+43 more)
changelog.d/templates/: new.md.j2  new.rst.j2  title.md.j2
cogent/: __init__.py
cogent/align/: __init__.py  _compare.c  _compare.pyx  _pairwise_pogs.c  _pairwise_pogs.pyx  _pairwise_seqs.c  _pairwise_seqs.pyx  algorithm.py  align.py  dp_calculation.py  indel_model.py  indel_positions.py  pairwise.py  partial_order_graph.py  progressive.py  pycompare.py  traceback.py
cogent/app/: __init__.py  blast.py  blat.py  bwa.py  carnac.py  cd_hit.py  cdbfasta.py  clearcut.py  clustalw.py  cmfinder.py  comrna.py  consan.py  contrafold.py  cove.py  dialign.py  dotur.py  dynalign.py  fastq_join.py  fasttree.py  fasttree_v1.py  flash.py  foldalign.py  formatdb.py  gctmpca.py  guppy.py  ilm.py  infernal.py  knetfold.py  lagan.py  mafft.py  mfold.py  mothur.py  msms.py  muscle.py  muscle_v38.py  nupack.py  pandaseq.py  parameters.py  parsinsert.py  pfold.py  (+22 more)
cogent/cluster/: UPGMA.py  __init__.py  approximate_mds.py  fast_metric_scaling_nystrom.py  goodness_of_fit.py  metric_scaling.py  nmds.py  procrustes.py
cogent/core/: __init__.py  alignment.py  alphabet.py  annotation.py  bitvector.py  entity.py  genetic_code.py  info.py  location.py  moltype.py  profile.py  sequence.py  tree.py  usage.py
cogent/data/: __init__.py  energy_params.py  ligand_properties.py  molecular_weight.py  nucleic_properties.py  protein_properties.py
cogent/db/: __init__.py  ncbi.py  pdb.py  rfam.py  util.py
cogent/draw/: __init__.py  arrow_rates.py  codon_usage.py  compatibility.py  dendrogram.py  dinuc.py  distribution_plots.py  dotplot.py  fancy_arrow.py  legend.py  linear.py  multivariate_plot.py  rlg2mpl.py  util.py
cogent/evolve/: __init__.py  _likelihood_tree.c  _likelihood_tree.pyx  _pairwise_distance.c  _pairwise_distance.pyx  _solved_models.c  _solved_models.pyx  best_likelihood.py  bootstrap.py  coevolution.py  discrete_markov.py  likelihood_calculation.py  likelihood_function.py  likelihood_tree.py  models.py  motif_prob_model.py  pairwise_distance.py  parameter_controller.py  predicate.py  simulate.py  solved_models.py  substitution_calculation.py  substitution_model.py
cogent/format/: __init__.py  alignment.py  bedgraph.py  clustal.py  fasta.py  mage.py  motif.py  nexus.py  pdb.py  pdb_color.py  phylip.py  rna_struct.py  stockholm.py  structure.py  table.py  text_tree.py  xyzrn.py
cogent/maths/: __init__.py  _fpconst.py  _fpconst.readme.txt  _matrix_exponentiation.c  (+21 more)
cogent3/: __init__.py
doc/: COGENT3_LICENSE.rst  COGENT_LICENSE.rst  EVOLVE_LICENSE.txt  FPCONST_LICENSE.txt  MATRIX_LICENSE.rst  MATRIX_LICENSE.txt  Makefile  align_codons_to_protein.rest  align_codons_to_protein.rst  alignment_app_controllers.rst  aln_profile.rest  aln_profile.rst  calculate_UPGMA_cluster.rest  calculate_UPGMA_cluster.rst  calculate_neigbourjoining_tree.rest  calculate_neigbourjoining_tree.rst  calculate_pairwise_distances.rest  calculate_pairwise_distances.rst  coding_guidelines.rest  coding_guidelines.rst  coevolution.rest  coevolution.rst  cogent3.bib  community.rst  complete_seq_features.rest  complete_seq_features.rst  condarc.yml  conf.py  data_file_links.rst  developer_notes.rst  doctest2script.py  doctest_rests.py  doctest_rsts.py  draw_dendrogram.rest  draw_dendrogram.rst  draw_dotplot.rest  draw_dotplot.rst  empirical_protein_models.rest  empirical_protein_models.rst  estimate_startingpoint.rest  (+59 more)
include/: array_interface.h  numerical_pyrex.pyx
misc/: boring
tests/: __init__.py  alltests.py  benchmark.py  benchmark_aligning.py  conftest.py  lcov-3.10.info  test_dataset.py  test_dictarray.py  test_dictarray.rest  test_dictarray.rst  test_draw.py  test_mpi.py  test_phylo.py  test_recalculation.py  test_recalculation.rst  test_tree_distance.py  timetrial.py
(+1499 files in other folders)
