[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cogent3"
description = """COmparative GENomics Toolkit 3: genomic sequence analysis within notebooks or on compute systems with 1000s of CPUs."""
# remember to update cogent3/_version.py too!
version = "2023.12.15a1"
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au"},
]
keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["chardet",
        "numpy",
        "numba>0.53; python_version>='3.9'",
        "numba>0.54; python_version>='3.10'",
        "numba>=0.57.0; python_version=='3.11'",
        "scipy",
        "scitrack",
        "tqdm",
        "typing_extensions"]
# remember to update version in requires-python and classifiers
requires-python = ">=3.9,<3.12"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]

[project.urls]
Documentation = "https://www.cogent3.org/"
"Bug Tracker" = "https://github.com/cogent3/cogent3/issues"
"Source Code" = "https://github.com/cogent3/cogent3"
Changelog = "https://github.com/cogent3/cogent3/blob/develop/changelog.md"

[project.optional-dependencies]
test = [
    "black==23.9.1",
    "isort==5.12.0",
    "click==8.1.7", # black needs this pinned
    "kaleido",
    "pandas",
    "plotly",
    "psutil",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tinydb",
    "nox"]
doc  = ["click==8.1.7",
        "ipykernel",
        "ipython",
        "ipywidgets",
        "jupyter-sphinx",
        "jupyter_client",
        "jupyterlab",
        "jupytext",
        "kaleido",
        "matplotlib",
        "nbconvert>5.4",
        "nbformat",
        "nbsphinx",
        "numpydoc",
        "pandas",
        "pillow",
        "plotly",
        "psutil",
        "sphinx",
        "sphinx-autobuild",
        "pydata_sphinx_theme",
        "sphinx_design",
        "sphinxcontrib-bibtex",
        "sphinxcontrib-video"]
extra = ["pandas", "plotly", "psutil", "kaleido"]
dev = ["black==23.9.1",
       "click==8.1.7",
       "flit",
       "ipykernel",
       "ipython",
       "ipywidgets",
       "isort==5.12.0",
       "jupyter-sphinx",
       "jupyter_client",
       "jupyterlab",
       "jupytext",
       "kaleido",
       "matplotlib",
       "nbconvert>5.4",
       "nbformat",
       "nbsphinx",
       "nox",
       "numpydoc",
       "pandas",
       "pillow",
       "plotly",
       "psutil",
       "pytest",
       "pytest-cov",
       "pytest-xdist",
       "scriv",
       "sphinx",
       "sphinx-autobuild",
       "pydata_sphinx_theme",
       "sphinx_design",
       "sphinxcontrib-bibtex",
       "sphinxcontrib-video",
       "tinydb"
]

[tool.flit.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    ]
testpaths = "tests"
addopts = ["--strict-config"]
norecursedirs = ["doc", ".nox"]
filterwarnings = [
    'ignore:FORCED EXIT from optimiser',
    'ignore:Motif probs overspecified',
    'ignore:Model not reversible',
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.venv
  | _build
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
src_paths = ["src", "tests","doc","noxfile.py"]

[tool.scriv]
format="md"
categories=["Contributors", "ENH", "BUG", "DOC", "Deprecations", "Discontinued"]
output_file="changelog.md"
version="literal: src/cogent3/_version.py:__version__"
skip_fragments="README.*"
new_fragment_template="file: changelog.d/templates/new.md.j2"
entry_title_template="file: changelog.d/templates/title.md.j2"
